# salatui

./: Cargo.toml  build.rs  plan.norg  todo.md
src/: main.rs  parsers.rs  structs.rs  ui.rs
src/backends/: mod.rs  salahtimes.rs
src/parsers/: args.rs
src/salat/: mod.rs
src/structs/: conf.rs  config.rs  data.rs  input.rs  mod.rs  ui.rs
src/ui/: calender.rs  menu.rs  mod.rs  settings.rs  structs.rs  utils.rs
