[package]
name = "salatui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
arboard = "3.2.0"
chrono = "0.4.26"
clap = { version = "4.2.1", features = ["derive"] }
confy = "0.5.1"
crossterm = "0.26.1"
directories = "5.0.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.104"
tui = { version = "0.19.0", features = ["serde"] }
